779 defect fixed. removed extra margin

--- a/node-app/src/views/core/components/content/breadcrumb/style.scss
+++ b/node-app/src/views/core/components/content/breadcrumb/style.scss
@@ -12,7 +12,6 @@
 .breadcrumb-wrapper-light-cool-blue{
   height: 43px;
   padding: 0 15px;
-  margin-top:10px;
     background:$light-cool-blue-color;
     ol{
       list-style-type:none;
